# rhodium

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP  ROADMAP.md  index.html  params.json
Arrow/: ArrowPlus.hs
Util/: Parser.hs
Util/Parser/: TextPos.hs
cmake/: CMakeDetermineHaskellCompiler.cmake  CMakeHaskellInformation.cmake  CMakeTestHaskellCompiler.cmake
cmake-haskell/: CMakeHaskellCompiler.cmake.in  LICENSE
test/: CMakeLists.txt
test/rhc-strap/: .ghci  CMakeLists.txt  Main.hs
test/rhc-strap/TestRhodium/: Context.hs
tools/proto/: Example1.hs  llvm-ex.ll
tools/proto/Abstract/: Arrow.hs  Category.hs
tools/rhc-strap/: CMakeLists.txt  Main.hs  library
tools/rhc-strap/Abstract/: Category.hs  Contextual.hs
tools/rhc-strap/Arrow/: ArrowParser.hs  Foldable.hs  Functor.hs  Lexer.hs  Monad.hs  Parser.hs
tools/rhc-strap/Data/: ListN.hs  Naturals.hs
tools/rhc-strap/Jeden/: Types.hs
tools/rhc-strap/Jeden/Category/: Context.hs  DependentTypeTheory.hs
tools/rhc-strap/Rhodium/: Builder.hs  Check.hs  Context.hs  Contextual.hs  Eval.hs  Judgement.hs  Micro.hs  Parse.hs  Types.hs
tools/rhc-strap/Util/: Parser.hs  ParserOld.hs  TextPos.hs
tools/rhc-strap/Util/Parser/: Lexer.hs
